--- a/style.css
+++ b/style.css
@@ -22,8 +22,9 @@
   color: white;
   text-decoration: none;
   display: inline;
-  font-size: 1.125rem;
+  font-size: 14px;
   line-height: 1.75rem;
+  margin-right: 15px;
 }
 
 .nav-div {
@@ -339,7 +340,6 @@
 
   .images {
     overflow-x: scroll;
-    scroll-behavior: smooth;
     gap: 50px;
     scrollbar-width: none;
   }
@@ -725,6 +725,7 @@
     margin-left: auto;
     margin-right: auto;
   }
+
   .h1 {
     text-align: center;
     font-size: 32px;
@@ -743,6 +744,7 @@
     margin-right: auto;
     color: rgb(33 33 33);
   }
+
   .main-button {
     width: 380px;
     margin-left: 20px;
@@ -764,6 +766,7 @@
     width: 300px;
     padding: 57px;
   }
+
   .sub-div2 {
     margin-top: 0px;
     gap: 0px;
@@ -794,6 +797,7 @@
     margin-left: auto;
     margin-right: auto;
   }
+
   .heading4 {
     margin-top: 80px;
     padding-bottom: 40px;
@@ -880,3 +884,139 @@
     width: 30px;
   }
 }
+
+@media(min-width:768px) and (max-width:1024px) {
+  .nav-main {
+    width: 100%;
+    height: 35px;
+    gap: 5px;
+    justify-content: center;
+  }
+
+
+  .nav-link {
+    display: block;
+    font-size: 14px;
+  }
+
+  .nav-name {
+    font-size: 18px;
+  }
+
+  .main-div {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    gap: 0px;
+  }
+
+  .div-img {
+    margin-left: 185px;
+    width: 400px;
+    height: 384;
+    margin-top: 0px;
+  }
+
+  .heading1 {
+    margin-top: 12px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.25rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .h1 {
+    text-align: center;
+    font-size: 32px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .heading2 {
+    font-size: 14px;
+    text-align: center;
+    line-height: 18px;
+    width: 650px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    color: rgb(33 33 33);
+  }
+
+  .main-button {
+    width: 130px;
+    margin-left: 320px;
+  }
+
+  .underline {
+    margin-top: 20px;
+    width: 100%;
+  }
+
+  .images {
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    gap: 50px;
+    scrollbar-width: none;
+  }
+
+  .heading3 {
+    font-size: 42px;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 45px;
+  }
+
+  .sub-div2 {
+    margin-top: 0px;
+    gap: 0px;
+  }
+
+  .heading4 {
+    margin-top: 80px;
+    padding-bottom: 40px;
+    font-size: 32px;
+  }
+
+  .main-div3 {
+    display: flex;
+    flex-wrap: wrap;
+    width: 500px;
+    gap: 0px;
+    margin-top: 0px;
+    padding-bottom: 40px;
+  }
+
+  .image-div {
+    padding-bottom: 0px;
+  }
+
+  .main-div4 {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 0px;
+    padding-bottom: 0px;
+    gap:20px;
+  }
+
+  .sub-div3 {
+    align-items: center;
+    margin-left: 20px;
+  }
+
+
+  .footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    gap: 40px;
+  }
+  .footer-text{
+    font-size: 18px;
+  }
+  .footer-text2{
+    font-size: 18px;
+  }
+  }
